update the typos

--- a/A6.md
+++ b/A6.md
@@ -82,9 +82,9 @@ We will be using a few new tools in this assignment:
 2.  `nextflow` is a tool for running workflows/pipelines. It is a
     command line tool, so you will need to use it from the terminal. You
     can find the documentation for `nextflow`
-    [here](https://www.nextflow.io/). NOTE: Nextflow is already
-    installed on the server and we will be using this version for the
-    assignment. **Do not install Nextflow using conda**.
+    [here](https://www.nextflow.io/). NOTE: Nextflow is going to be
+    installed through the conda environment installed through a yaml
+    file located in the A6 directory.
 
 ### Other notes:
 
@@ -425,7 +425,7 @@ The trait is Prostate cancer.
 #?# 21. Use nextflow to run the pgsc_calc pipeline on the bfile files located in /projects/bmeg/A6/pgsc_calc/. (1 pt) Remember to use:
 # - the sample sheet mentioned in the previous paragraph
 # - the EFO id mentioned in the paragraph
-# - the hg38 (GRCh37) reference genome
+# - the hg19 (GRCh37) reference genome
 # - the conda profile
 # - a minimum overlap of 0.45
 ```
