--- a/A6.md
+++ b/A6.md
@@ -157,7 +157,18 @@ the command below to perform the QC.
 ``` bash
 #?# 1. Fill in the following command and use it to perform the QC on the Mini-Cohort data. Read the instructions above carefully to get the right values for each argument. (1 pt)
 
-plink --bfile /projects/bmeg/A6/MiniCohort/Mini_cohort <args> --out /home/<username>/A6/MiniCohort/Mini_cohort_QCed
+# Sourced from https://www.cog-genomics.org/plink/1.9/filter
+
+# geno for remove SNPs with more than 5% missingness
+# mind for remove samples with more than 2% missingness
+# maf for remove SNPs with MAF lower than 1%
+
+plink --bfile /projects/bmeg/A6/MiniCohort/Mini_cohort\
+        --geno 0.05 \
+        --mind 0.02 \
+        --maf 0.01 \
+        --make-bed \
+        --out /home/tliang_bmeg24/A6/MiniCohort/Mini_cohort_QCed
 ```
 
 ### 2. Imputation of Genotypes from 1000 Genomes Data
@@ -213,6 +224,17 @@ patient may have. You can see how to do this in the following
 ## - Variant Count: 100 
 ## - VIF (variance inflation factor): 0.2 
 #?# 2. Type the command you use to create the Mini Cohort PCA-QCed bfile below (1pt)
+
+# Sourced from https://www.cog-genomics.org/plink/1.9/ld
+# PARAMS
+LD_FILE="/projects/bmeg/A6/high_LD_regions_hg19.txt"
+INPUT_DATA="/home/tliang_bmeg24/A6/MiniCohort/Mini_cohort_QCed"
+# Then run the plink here
+# Could be problem with indep?
+plink --bfile ${INPUT_DATA} \
+        --indep-pairwise 200 10 0.2 \
+        --exclude ${LD_FILE} \
+        --out ${INPUT_DATA}
 ```
 
 You should have a new file called `plink.prune.in` which you can use to
@@ -221,8 +243,20 @@ extract only the SNPs which passed the LD pruning. You can use the
 
 ``` bash
 #?# 3. Use plink to extract the SNPs which passed the LD pruning from the QC'd minicohort file you created in Q1. (1pt)
-
+# PARAMS
+COHORT="/home/tliang_bmeg24/A6/MiniCohort/Mini_cohort_QCed"
+PRUNED="${COHORT}.prune.in"
+KGP_REF="/projects/bmeg/A6/1000G/1kgp_reference"
+# THE ONES PASS LD FROM QCD MINICOHORT
+plink --bfile ${COHORT} \
+        --extract ${PRUNED} \
+        --make-bed \
+        --out ${COHORT}_pr
 #?# 4. Do the same on the 1KGP_reference bfile which is located in /projects/bmeg/A7/1000G/ (1pt)
+plink --bfile ${KGP_REF} \
+        --extract ${PRUNED} \
+        --make-bed \    
+        --out /home/tliang_bmeg24/A6/MiniCohort/1kgp_reference
 ```
 
 #### b. PCA Computation
@@ -247,6 +281,17 @@ from your Mini_Cohort (containing our GWAS data) and the 1000G_reference
 #?# 5.  Merge your pruned bfiles of the Mini_cohort and the 1KGP created on the previous step (0.5pts)
 ## NOTE: Remember to create a new bfile (.fam, .bed and .bim files) that contains the merged data.
 ## IMPORTANT TIME CONSTRAINT: This step can take ~15 minutes, so make sure to check the server status before you run it!
+
+COHORT_DIR="/home/tliang_bmeg24/A6/MiniCohort"
+PR="${COHORT_DIR}/Mini_cohort_QCed_pr"
+KGP_REF="${COHORT_DIR}/1kgp_reference"
+OUT_FILE="${COHORT_DIR}/merged_bfile"
+
+# run it
+plink --bfile ${PR} \
+        --bmerge ${KGP_REF} \
+        --make-bed \
+        --out ${OUT_FILE}
 ```
 
 You can now perform a PCA on the merged bfile you output in the last
@@ -254,6 +299,15 @@ step:
 
 ``` bash
 #?# 6. Using plink, perform a PCA analysis in plink on the merged set (0.5pts)
+
+# Sourced from https://www.cog-genomics.org/plink/1.9/strat#pca
+
+MERGED="/home/tliang_bmeg24/A6/MiniCohort/merged_bfile"
+OUT_FILE="/home/tliang_bmeg24/A6/MiniCohort/merged_pca"
+# Run this to calculate the pca
+plink --bfile ${MERGED} \
+      --pca \
+      --out ${OUT_FILE}
 ```
 
 #### c. Visualization of the PCA results
@@ -272,8 +326,25 @@ SuperPopulation, Population.
 \#?# 7. Load the `.eigenvec` and `samples_info.txt` file into R and set
 the column names as described above. (0.25 pts)
 
+``` r
+# Some column names from paragraph
+pcs <- paste0("PC", seq(1,20))
+ev_names <- c("FID", "IID", pcs)
+ev <- read.table("output/merged_pca.eigenvec", col.names = ev_names)
+# As per piazza https://piazza.com/class/lqxz3jehdlc57y/post/130
+# Also change colnames of samples_info
+samples_names <- c("IID", "FID", "SuperPopulation", "Population")
+samples_info <- read.table("output/samples_info.txt", col.names = samples_names)
+```
+
 \#?# 8. Merge the two dataframes using the IID column (look at the merge
 function documentation by typing `?merge` in the R console). (0.25 pts)
+
+``` r
+# Merging by IID, ignoring the overlapped FID since instruction
+# did not mention what to do with it
+merged_df <- merge(ev, samples_info, by="IID")
+```
 
 \#?# 9. \## Using ggplot create a scatterplot, using: - x-axis: PC1 -
 y-axis: PC2 - color: SuperPopulation - to use the Population information
@@ -281,12 +352,29 @@ to color the samples and be able to appreciate population structure
 
 ``` r
 # include the code used to generate the plot below, when you knit your Rmd file verify that the plot is displayed
+
+merged_df %>%
+  ggplot(aes(x=PC1, y = PC2, color=SuperPopulation)) +
+  geom_point() +
+  theme_bw() +
+  scale_color_brewer(palette = "Set1") +
+  ggtitle("PCA of MiniCohor and 1kGP reference SNPs by super population")
 ```
+
+![](A6_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 
 \#?# 10. Where do the cohort samples fall? (0.5 pts)
 
+> The cohort Samples fall on the upper left half of the graph, so high
+> PC2, but low PC1. It stays quite close to those of SAS, AMR, EUR and
+> far away from EAS and AFR.
+
 \#?# 11. Which population would you use as a reference for imputation?
 Why? (1.5 pts)
+
+For reference of imputation, I would choose the AMR super population.
+This is because it has most overlap with our minicohort samples,
+otherwise taking SAS as consideration as well.
 
 #### d. Imputation
 
@@ -302,6 +390,24 @@ and then calculate the average imputation quality for each population.
 
 \#?# 12. What is the percentage of imputed SNPs? (1 pt)
 
+``` r
+# So load the file
+imputation <- read.table("output/Mini_cohort_chr17_imputation_results.info", header=T)
+
+# percentage of imputed SNPs
+percentages <- imputation %>%
+  group_by(Genotyped) %>%
+  summarize(count = n() /nrow(imputation) * 100)
+
+percentages
+```
+
+    ## # A tibble: 2 × 2
+    ##   Genotyped  count
+    ##   <chr>      <dbl>
+    ## 1 Genotyped  0.702
+    ## 2 Imputed   99.3
+
 The metric of imputation quality is Rsq, this is the estimated value of
 the squared correlation between imputed and true genotypes. Since true
 genotypes are not available, this calculation is based on the idea that
@@ -312,10 +418,38 @@ based on allele frequencies observed in the population
 
 \#?# 13. What is the percentage of poorly imputed SNPs? (1 pt)
 
+``` r
+# So only looking at those that genotype as imputed
+imputed <- imputation %>% filter(Genotyped == "Imputed")
+# Since Rsq being poorly imputed
+poor_impute_n <- imputed %>%
+              filter(Rsq < 0.3) %>%
+              nrow()
+
+(poor_impute_n / nrow(imputed)) *  100
+```
+
+    ## [1] 63.86188
+
 \#?# 14. Visualize the distribution of the MAF in your imputed data (0.5
 pts)
 
+``` r
+imputed %>%
+  ggplot(aes(x=MAF)) +
+  geom_histogram(col="white", fill="skyblue") +
+  scale_y_log10() + 
+  theme_bw() +
+  labs(x="Minor Allele Frequency", title="Minor Allele Frequency Distribution in the imputed data")
+```
+
+![](A6_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+
 \#?# 15. Analyze the plot above, what do you notice? (2 pts)
+
+There is a peak value at 0, meaning many of our imputed data have 0
+minor allele frequency. Rest, like MAF after 0 seems to be uniformly
+distributed, with MAF value cap around 0.5.
 
 ### 3. Calculating Polygenic Scores (manual approach)
 
@@ -354,11 +488,113 @@ individual in the Mini Cohort.
 
 ``` r
 # Tip: You only need the files in the tapas directory to complete this question
+
+# Load files
+dosages <- read.table("output/MiniCohort_Tapas_SNPdosages.txt", header=T)
+sum_stat <- read.table("output/Tapas_enjoyability_GWAS_sumStats.txt", header=T)
+
+# helper fun to calculate prs
+calculate_PRS <- function(beta, gene) {
+  multi <- beta * gene
+  prs <- sum(multi)
+  return(prs)
+}
+
+
+prs_mini <- dosages %>%
+  pivot_longer(starts_with("rs"), names_to = "SNP") %>%
+  left_join(sum_stat, by="SNP") %>%
+  group_by(IID) %>%
+  summarize(PRS = calculate_PRS(beta=Effect_Size, value))
+
+prs_mini %>% knitr::kable()
 ```
+
+| IID     |       PRS |
+|:--------|----------:|
+| NA19649 |  24.84181 |
+| NA19651 |  29.43423 |
+| NA19652 |  12.72804 |
+| NA19654 |  24.56438 |
+| NA19655 |  12.78852 |
+| NA19657 |   8.35869 |
+| NA19658 |  14.65265 |
+| NA19661 |  18.34110 |
+| NA19663 |  30.43842 |
+| NA19664 |  20.87267 |
+| NA19669 |  31.25186 |
+| NA19670 |   1.99843 |
+| NA19676 |  23.20303 |
+| NA19678 |   3.07489 |
+| NA19679 |   7.93791 |
+| NA19681 |  25.22931 |
+| NA19682 |   8.70430 |
+| NA19684 |  31.31115 |
+| NA19716 |  38.36467 |
+| NA19717 |  17.80205 |
+| NA19719 |  24.70952 |
+| NA19720 |  31.53787 |
+| NA19722 |  27.73976 |
+| NA19723 |  34.45540 |
+| NA19725 |   5.59570 |
+| NA19726 |  22.31392 |
+| NA19728 |   7.58563 |
+| NA19729 | -10.40604 |
+| NA19731 |  -8.12046 |
+| NA19732 |  -0.33614 |
+| NA19734 |  14.24906 |
+| NA19735 |  24.79131 |
+| NA19740 |  17.26722 |
+| NA19741 |  -0.39075 |
+| NA19746 |  27.09533 |
+| NA19747 |  13.18553 |
+| NA19749 |  24.15010 |
+| NA19750 |  13.73062 |
+| NA19752 |  23.79800 |
+| NA19755 |   9.92227 |
+| NA19756 |   4.47148 |
+| NA19758 |  16.86456 |
+| NA19759 |  23.26737 |
+| NA19761 |  32.91110 |
+| NA19762 |  14.18713 |
+| NA19764 |  28.50019 |
+| NA19770 |  28.23938 |
+| NA19771 |  22.84820 |
+| NA19773 |  36.94977 |
+| NA19774 |   7.32103 |
+| NA19776 |  18.08052 |
+| NA19777 |  12.32953 |
+| NA19779 |  32.65660 |
+| NA19780 |   5.28892 |
+| NA19782 |  29.95761 |
+| NA19783 |  28.97731 |
+| NA19785 |  19.32970 |
+| NA19786 |  16.18814 |
+| NA19788 |   3.76833 |
+| NA19789 |   9.64055 |
+| NA19792 |   5.07950 |
+| NA19794 |  13.91063 |
+| NA19795 |   9.74386 |
 
 \#?# 17. Plot a histogram of the PRSs. (0.5 pts)
 
+``` r
+prs_mini %>%
+  ggplot(aes(x=PRS)) +
+  geom_histogram(color="white", fill="blue", bins=15) +
+  geom_vline(aes(xintercept = mean(PRS)), color="red", linetype="dashed", linewidth=2) +
+  labs(x = "Polygenic Score", title = "Polygenic Scores Distribution") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 75, hjust = 1))
+```
+
+![](A6_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
 \#?# 18. What do you notice about the distribution of the PRSs? (1 pt)
+
+There’s single mode at around 12 or 13 of polygenic score. Its
+distribution looks roughly normal, whereas red line represent the mean
+of polygenic score.
 
 ### 4. Calculating Polygenic Scores (automated approach)
 
@@ -373,6 +609,11 @@ doing anything else.**
 ``` bash
 #?# 19. Go into the copy of the pgsc_calc directory which is located in your home directory and type pwd to get the full path. Paste the command and path below. (0.5 pts)
 # do all further work in this directory 
+
+# COMMAND
+cd ~/pgsc_calc && pwd
+
+/home/tliang_bmeg24/pgsc_calc
 ```
 
 `pgsc_calc` is a pipeline that automates the calculation of polygenic
@@ -428,6 +669,27 @@ The trait is Prostate cancer.
 # - the hg19 (GRCh37) reference genome
 # - the conda profile
 # - a minimum overlap of 0.45
+# PARAMS
+EFO_ID="MONDO_0008315"
+GENOME="GRCh37"
+MIN_OVERLAP="0.45"
+# Run the nextflow pipeline
+
+# Running for patient3
+nextflow run pgscatalog/pgsc_calc \
+    -profile conda \
+        --input /projects/bmeg/A6/pgsc_calc/samplesheet_bfile_p3.csv \
+        --trait_efo ${EFO_ID} \
+        --target_build ${GENOME} \
+        --min_overlap ${MIN_OVERLAP}
+
+# Running for patient 6
+nextflow run pgscatalog/pgsc_calc \
+    -profile conda \
+        --input /projects/bmeg/A6/pgsc_calc/samplesheet_bfile_p6.csv \
+        --trait_efo ${EFO_ID} \
+        --target_build ${GENOME} \
+        --min_overlap ${MIN_OVERLAP}
 ```
 
 ## Discussion:
@@ -435,17 +697,116 @@ The trait is Prostate cancer.
 \#?# 22. What assumption of PCA is violated by the presence of SNPs in
 LD with one another? (1pt)
 
+> Sourced from
+> [here](https://stats.stackexchange.com/questions/48903/principal-components-analysis-how-independent-should-the-input-measures-be)
+>
+> and [here](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7199518/)
+>
+> and
+> [here](https://harvard-iacs.github.io/2019-CS109A/a-section/a-section4/presentation/Adv_Section4_Slides_PCA.pdf)
+
+Independence of observations, given when LD exists between two random
+SNPs, then they are not independent anymore, hence violating PCA’s
+assumption
+
 \#?# 23. Do you think looking at the top two PCs for our Mini Cohort was
 enough to determine the ancestry of the samples? Why or why not? (3 pts)
+
+Given we have chances to violate PCA’s assumption as mentioned in
+Question 22, hence it is worth to look at other PCs on the list like PC3
+and PC4
+
+``` r
+# THis looks at PC3 and PC4
+merged_df %>%
+  ggplot(aes(x=PC3, y = PC4, color=SuperPopulation)) +
+  geom_point() +
+  theme_bw() +
+  scale_color_brewer(palette = "Set1") +
+  ggtitle("PCA of MiniCohor and 1kGP reference SNPs by super population")
+```
+
+![](A6_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+
+It showed similar trend of when looking at PC1 and PC2, whereas our
+minicohort is overlapped with AMR, but notice SAS is not close to the
+cohort anymore like before.
 
 \#?# 24. Examine the report generated by pgsc_calc. Also look at the
 aggregated_scores.txt.gz (remember to unzip the file!). Summarize the
 results for both patients with regards to both conditions. (3 pts)
 
+``` r
+# Read the files from nextflow
+p3 <- read.delim("output/p3_scores.txt", sep="\t")
+p6 <- read.delim("output/p6_scores.txt", sep="\t")
+
+# Show summary for patient 3
+summary(p3)
+```
+
+    ##   sampleset             IID                PGS                 SUM          
+    ##  Length:47          Length:47          Length:47          Min.   : -2.0266  
+    ##  Class :character   Class :character   Class :character   1st Qu.: -0.4086  
+    ##  Mode  :character   Mode  :character   Mode  :character   Median : -0.0449  
+    ##                                                           Mean   : 16.0718  
+    ##                                                           3rd Qu.:  4.7138  
+    ##                                                           Max.   :644.6500  
+    ##                                                                             
+    ##      DENOM              AVG            
+    ##  Min.   :2110188   Min.   :-9.604e-07  
+    ##  1st Qu.:2110188   1st Qu.:-1.936e-07  
+    ##  Median :2110188   Median :-2.128e-08  
+    ##  Mean   :2110188   Mean   : 7.616e-06  
+    ##  3rd Qu.:2110188   3rd Qu.: 2.234e-06  
+    ##  Max.   :2110188   Max.   : 3.055e-04  
+    ##  NA's   :46
+
+``` r
+# Show summary for patient 6
+summary(p6)
+```
+
+    ##   sampleset             IID                PGS                 SUM          
+    ##  Length:33          Length:33          Length:33          Min.   :-1.72980  
+    ##  Class :character   Class :character   Class :character   1st Qu.:-0.24233  
+    ##  Mode  :character   Mode  :character   Mode  :character   Median :-0.02715  
+    ##                                                           Mean   : 1.87782  
+    ##                                                           3rd Qu.: 0.70508  
+    ##                                                           Max.   :39.77340  
+    ##                                                                             
+    ##      DENOM              AVG            
+    ##  Min.   :2091788   Min.   :-8.269e-07  
+    ##  1st Qu.:2091788   1st Qu.:-1.158e-07  
+    ##  Median :2091788   Median :-1.298e-08  
+    ##  Mean   :2091788   Mean   : 8.977e-07  
+    ##  3rd Qu.:2091788   3rd Qu.: 3.371e-07  
+    ##  Max.   :2091788   Max.   : 1.901e-05  
+    ##  NA's   :32
+
+There are total of 6 columns in both aggregated scores files for patient
+3 and patient 6. The mean value of AVG in patient 3 is a big higher, but
+both are small decimal places. Then, there were less information for
+patient 6 having only 33 samples, whereas patient 3 has 47. Lastly, one
+important aspect is when looking at the SUM column, the maximum value of
+patient 3 is 644.65, while patient 6 has only 39.77, and when looking at
+the mean of this patient 3 definitely has higher value. Although, when
+looking at median, both have similar value in this SUM column.
+
 \#?# 25. Can you say with certainty which patient is at higher risk for
 the disease analyzed in section 4, based on the PRSs? Why or why not? (1
 pts)
 
+Not as certain, given the PRS from both patients share similar
+distributions, although patient 3 had a max value of 644.65, which could
+be by chance. So we cannot say this patient for sure has higher risk for
+getting prostate cancer.
+
 \#?# 26. If we were to repeat our PRS analysis for 4 different complex
 traits, would we be able to tell which trait each patient is at higher
 risk for? Why or why not? (1 pts)
+
+No, given their variants and SNPs might overlap if each complex train is
+somewhat similar to one another. And these PRs values are aggregated
+altogether, hence further analysis is required to assess if each patient
+is at higher risk for.
